@@ -2,16 +2,15 @@
 package com.hedera.node.app.blocks.impl.streaming;
 
 import static com.hedera.node.app.blocks.impl.streaming.BlockNodeConnection.LONGER_RETRY_DELAY;
+import static java.util.Collections.shuffle;
 import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.collectingAndThen;
+import static java.util.stream.Collectors.toList;
 
-import com.google.common.annotations.VisibleForTesting;
-import com.hedera.hapi.block.PublishStreamRequest;
-import com.hedera.hapi.block.PublishStreamResponse;
-import com.hedera.hapi.block.protoc.BlockStreamServiceGrpc;
 import com.hedera.hapi.block.stream.BlockItem;
+import com.hedera.node.app.blocks.impl.streaming.BlockBufferService.BlockStreamQueueItem;
+import com.hedera.node.app.blocks.impl.streaming.BlockBufferService.BlockStreamQueueItemType;
 import com.hedera.node.app.blocks.impl.streaming.BlockNodeConnection.ConnectionState;
-import com.hedera.node.app.blocks.impl.streaming.BlockStreamStateManager.BlockStreamQueueItem;
-import com.hedera.node.app.blocks.impl.streaming.BlockStreamStateManager.BlockStreamQueueItemType;
 import com.hedera.node.app.metrics.BlockStreamMetrics;
 import com.hedera.node.config.ConfigProvider;
 import com.hedera.node.config.data.BlockNodeConnectionConfig;
@@ -30,25 +29,28 @@ import io.helidon.webclient.grpc.GrpcServiceClient;
 import io.helidon.webclient.grpc.GrpcServiceDescriptor;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.EnumSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Random;
-import java.util.Set;
+import java.util.Queue;
+import java.util.SortedMap;
+import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.hiero.block.api.PublishStreamRequest;
+import org.hiero.block.api.protoc.BlockStreamPublishServiceGrpc;
 
 /**
  * Manages connections to block nodes in a Hedera network, handling connection lifecycle, node selection,
@@ -62,68 +64,166 @@ import org.apache.logging.log4j.Logger;
  * </ul>
  */
 public class BlockNodeConnectionManager {
+
+    private static final Logger logger = LogManager.getLogger(BlockNodeConnectionManager.class);
+
     /**
      * Initial retry delay for connection attempts.
      */
     public static final Duration INITIAL_RETRY_DELAY = Duration.ofSeconds(1);
-
+    /**
+     * The amount of time the worker thread will sleep when there is no work available to process.
+     */
     private static final int PROCESSOR_LOOP_DELAY_MS = 10;
-    private static final Logger logger = LogManager.getLogger(BlockNodeConnectionManager.class);
+
     private static final long RETRY_BACKOFF_MULTIPLIER = 2;
-    private static final String GRPC_END_POINT =
-            BlockStreamServiceGrpc.getPublishBlockStreamMethod().getBareMethodName();
-    // Maximum retry delay to prevent excessively long waits
+    /**
+     * The maximum delay used for reties.
+     */
     private static final Duration MAX_RETRY_DELAY = Duration.ofSeconds(10);
-    private static final Set<ConnectionState> RETRY_STATES = Collections.unmodifiableSet(
-            EnumSet.of(ConnectionState.PENDING_TO_STREAM, ConnectionState.PENDING_TO_CONNECT));
-
-    // Add a random number generator for retry jitter
-    private final Random random = new Random();
+    /**
+     * The gRPC endpoint used to establish communication between the consensus node and block node.
+     */
+    private final String grpcEndpoint;
+    /**
+     * Tracks what the last verified block for each connection is. Note: The data maintained here is based on what the
+     * block node has informed the consensus node of. If a block node is not actively connected, then this data may be
+     * incorrect from the perspective of the block node. It is only when the block node informs the consensus node of
+     * its status, then the data will be accurate.
+     */
     private final Map<BlockNodeConfig, Long> lastVerifiedBlockPerConnection;
-
-    private final BlockStreamStateManager blockStreamStateManager;
-    private final ScheduledExecutorService connectionExecutor = Executors.newScheduledThreadPool(4);
+    /**
+     * Manager that maintains the block stream on this consensus node.
+     */
+    private final BlockBufferService blockBufferService;
+    /**
+     * Scheduled executor service that is used to scheduled asynchronous tasks such as reconnecting to block nodes.
+     */
+    private final ScheduledExecutorService executorService;
+    /**
+     * Metrics API for block stream-specific metrics.
+     */
     private final BlockStreamMetrics blockStreamMetrics;
+    /**
+     * Mechanism to retrieve configuration properties related to block-node communication.
+     */
     private final ConfigProvider configProvider;
-    private List<BlockNodeConfig> availableNodes;
-    private final AtomicBoolean blockStreamWorkerThreadRunning = new AtomicBoolean(true);
+    /**
+     * List of available block nodes this consensus node can connect to, or at least attempt to. This list is read upon
+     * startup from the configuration file(s) on disk.
+     */
+    private final List<BlockNodeConfig> availableBlockNodes;
+    /**
+     * Flag that indicates if this connection manager is active or not. In this case, being active means it is actively
+     * processing blocks and attempting to send them to a block node.
+     */
+    private final AtomicBoolean isConnectionManagerActive = new AtomicBoolean(false);
+    /**
+     * In certain cases, there will be times when we need to jump to a specific block to stream to a block node (e.g.
+     * after receiving a SkipBlock or ResendBlock response). When one of these cases arises, this will be updated to
+     * indicate which block to jump to upon the next iteration of the worker loop. A value of -1 indicates no jumping
+     * is requested.
+     */
     private final AtomicLong jumpTargetBlock = new AtomicLong(-1);
+    /**
+     * This tracks which block is actively being streamed to a block node from this consensus node. A value of -1
+     * indicates that no streaming is currently in progress.
+     */
     private final AtomicLong streamingBlockNumber = new AtomicLong(-1);
+    /**
+     * This connection streams requests (maintained by {@link BlockState}) in an orderly fashion. This value represents
+     * the index of the request that is being sent to the block node (or was last sent).
+     */
     private int requestIndex = 0;
-    private Thread blockStreamWorkerThread;
+    /**
+     * Reference to the worker thread that handles creating requests and sending requests to the connected block node.
+     */
+    private final AtomicReference<Thread> blockStreamWorkerThreadRef;
+    /**
+     * Map that contains one or more connections to block nodes. The connections in this map will be a subset (or all)
+     * of the available block node connections. (see {@link BlockNodeConnectionManager#availableBlockNodes})
+     */
+    private final Map<BlockNodeConfig, BlockNodeConnection> connections = new ConcurrentHashMap<>();
+    /**
+     * Reference to the currently active connection. If this reference is null, then there is no active connection.
+     */
+    private final AtomicReference<BlockNodeConnection> activeConnectionRef = new AtomicReference<>();
+    /**
+     * Flag that indicates if streaming to block nodes is enabled. This flag is set once upon startup and cannot change.
+     */
+    private final AtomicBoolean isStreamingEnabled = new AtomicBoolean(false);
 
     /**
      * Creates a new BlockNodeConnectionManager with the given configuration from disk.
      * @param configProvider the configuration to use
-     * @param blockStreamStateManager the block stream state manager
+     * @param blockBufferService the block stream state manager
      * @param blockStreamMetrics the block stream metrics to track
+     * @param executorService the scheduled executor service used to perform async connection operations (e.g. reconnect)
      */
     public BlockNodeConnectionManager(
             @NonNull final ConfigProvider configProvider,
-            @NonNull final BlockStreamStateManager blockStreamStateManager,
-            @NonNull final BlockStreamMetrics blockStreamMetrics) {
+            @NonNull final BlockBufferService blockBufferService,
+            @NonNull final BlockStreamMetrics blockStreamMetrics,
+            @NonNull final ScheduledExecutorService executorService) {
         this.configProvider = requireNonNull(configProvider, "configProvider must not be null");
-        this.blockStreamStateManager =
-                requireNonNull(blockStreamStateManager, "blockStreamStateManager must not be null");
+        this.blockBufferService = requireNonNull(blockBufferService, "blockBufferService must not be null");
         this.lastVerifiedBlockPerConnection = new ConcurrentHashMap<>();
         this.blockStreamMetrics = requireNonNull(blockStreamMetrics, "blockStreamMetrics must not be null");
+        this.executorService = requireNonNull(executorService);
 
-        if (configProvider
+        final String endpoint =
+                BlockStreamPublishServiceGrpc.getPublishBlockStreamMethod().getBareMethodName();
+        grpcEndpoint = requireNonNull(endpoint, "gRPC endpoint is missing");
+
+        isStreamingEnabled.set(isStreamingEnabled());
+        final Thread workerThread;
+
+        if (isStreamingEnabled.get()) {
+            final String blockNodeConnectionConfigPath = blockNodeConnectionFileDir();
+
+            availableBlockNodes = new ArrayList<>(extractBlockNodesConfigurations(blockNodeConnectionConfigPath));
+            logger.info("Loaded block node configuration from {}", blockNodeConnectionConfigPath);
+            logger.info("Block node configuration: {}", availableBlockNodes);
+
+            workerThread = Thread.ofPlatform().name("BlockStreamWorkerLoop").start(this::blockStreamWorkerLoop);
+        } else {
+            logger.info("Block node streaming is disabled; will not setup connections to block nodes");
+            availableBlockNodes = new ArrayList<>();
+            // Create a dummy thread that does nothing to avoid null checks later
+            workerThread = Thread.ofPlatform().name("BlockStreamWorkerLoop").start(() -> {});
+        }
+
+        blockStreamWorkerThreadRef = new AtomicReference<>(workerThread);
+    }
+
+    /**
+     * @return true if block node streaming is enabled, else false
+     */
+    private boolean isStreamingEnabled() {
+        return configProvider
                 .getConfiguration()
                 .getConfigData(BlockStreamConfig.class)
-                .streamToBlockNodes()) {
-            final var blockNodeConnectionConfigPath = configProvider
-                    .getConfiguration()
-                    .getConfigData(BlockNodeConnectionConfig.class)
-                    .blockNodeConnectionFileDir();
+                .streamToBlockNodes();
+    }
 
-            this.availableNodes = extractBlockNodesConfigurations(blockNodeConnectionConfigPath);
-            logger.info("Loaded block node configuration from {}", blockNodeConnectionConfigPath);
-            logger.info("Block node configuration: {}", this.availableNodes);
+    /**
+     * @return the configuration path (as a String) for the block node connections
+     */
+    private String blockNodeConnectionFileDir() {
+        return configProvider
+                .getConfiguration()
+                .getConfigData(BlockNodeConnectionConfig.class)
+                .blockNodeConnectionFileDir();
+    }
 
-            blockStreamWorkerThread =
-                    Thread.ofPlatform().name("BlockStreamWorkerLoop").start(this::blockStreamWorkerLoop);
-        }
+    /**
+     * @return the batch size for a request to send to the block node
+     */
+    private int blockItemBatchSize() {
+        return configProvider
+                .getConfiguration()
+                .getConfigData(BlockStreamConfig.class)
+                .blockItemBatchSize();
     }
 
     /**
@@ -133,7 +233,7 @@ public class BlockNodeConnectionManager {
      * @return the configurations for all block nodes
      */
     private List<BlockNodeConfig> extractBlockNodesConfigurations(@NonNull final String blockNodeConfigPath) {
-        final var configPath = Paths.get(blockNodeConfigPath, "block-nodes.json");
+        final Path configPath = Paths.get(blockNodeConfigPath, "block-nodes.json");
         try {
             final byte[] jsonConfig = Files.readAllBytes(configPath);
             final BlockNodeConnectionInfo protoConfig = BlockNodeConnectionInfo.JSON.parse(Bytes.wrap(jsonConfig));
@@ -141,26 +241,25 @@ public class BlockNodeConnectionManager {
             // Convert proto config to internal config objects
             return protoConfig.nodes().stream()
                     .map(node -> new BlockNodeConfig(node.address(), node.port(), node.priority()))
-                    .collect(Collectors.toList());
-        } catch (IOException | ParseException e) {
+                    .toList();
+        } catch (final IOException | ParseException e) {
             logger.error("Failed to read block node configuration from {}", configPath, e);
             throw new RuntimeException("Failed to read block node configuration from " + configPath, e);
         }
     }
 
     /**
-     * Returns the gRPC endpoint for the block stream service.
+     * Creates a new gRPC client based on the specified configuration.
      *
-     * @return the gRPC endpoint for publish block stream
+     * @param nodeConfig the configuration to use for a specific block node to connect to
+     * @return a gRPC client
      */
-    public String getGrpcEndPoint() {
-        return GRPC_END_POINT;
-    }
+    private @NonNull GrpcServiceClient createNewGrpcClient(@NonNull final BlockNodeConfig nodeConfig) {
+        requireNonNull(nodeConfig);
 
-    private GrpcServiceClient createNewGrpcClient(@NonNull BlockNodeConfig node) {
         final GrpcClient client = GrpcClient.builder()
                 .tls(Tls.builder().enabled(false).build())
-                .baseUri("http://" + node.address() + ":" + node.port())
+                .baseUri("http://" + nodeConfig.address() + ":" + nodeConfig.port())
                 .protocolConfig(GrpcClientProtocolConfig.builder()
                         .abortPollTimeExpired(false)
                         .pollWaitTime(Duration.ofSeconds(30))
@@ -169,12 +268,13 @@ public class BlockNodeConnectionManager {
                 .build();
 
         return client.serviceClient(GrpcServiceDescriptor.builder()
-                .serviceName(BlockStreamServiceGrpc.SERVICE_NAME)
+                .serviceName(BlockStreamPublishServiceGrpc.SERVICE_NAME)
                 .putMethod(
-                        GRPC_END_POINT,
-                        GrpcClientMethodDescriptor.bidirectional(BlockStreamServiceGrpc.SERVICE_NAME, GRPC_END_POINT)
-                                .requestType(PublishStreamRequest.class)
-                                .responseType(PublishStreamResponse.class)
+                        grpcEndpoint,
+                        GrpcClientMethodDescriptor.bidirectional(
+                                        BlockStreamPublishServiceGrpc.SERVICE_NAME, grpcEndpoint)
+                                .requestType(org.hiero.block.api.protoc.PublishStreamRequest.class)
+                                .responseType(org.hiero.block.api.protoc.PublishStreamResponse.class)
                                 .marshallerSupplier(new RequestResponseMarshaller.Supplier())
                                 .build())
                 .build());
@@ -187,17 +287,21 @@ public class BlockNodeConnectionManager {
      * @param connection the connection that received the error
      * @param initialDelay the delay to wait before retrying the connection
      */
-    public void handleConnectionError(@NonNull final BlockNodeConnection connection, @NonNull Duration initialDelay) {
-        synchronized (blockStreamStateManager.getConnections()) {
-            logger.warn(
-                    "[{}] Handling connection error for {}",
-                    Thread.currentThread().getName(),
-                    blockNodeName(connection.getNodeConfig()));
-            // Schedule retry for the failed connection after a delay (initialDelay)
-            scheduleRetry(connection, initialDelay, null);
-            // Immediately try to find and connect to the next available node
-            selectBlockNodeForStreaming();
+    public void rescheduleAndSelectNewNode(
+            @NonNull final BlockNodeConnection connection, @NonNull final Duration initialDelay) {
+        if (!isStreamingEnabled.get()) {
+            return;
         }
+
+        requireNonNull(connection);
+        requireNonNull(initialDelay);
+
+        logger.warn("[{}] Rescheduling connection for reconnect attempt", connection);
+
+        // Schedule retry for the failed connection after a delay (initialDelay)
+        scheduleConnectionAttempt(connection, initialDelay, null);
+        // Immediately try to find and connect to the next available node
+        selectNewBlockNodeForStreaming();
     }
 
     /**
@@ -206,37 +310,34 @@ public class BlockNodeConnectionManager {
      *
      * @param connection the connection to schedule a retry for
      * @param initialDelay the delay before the first attempt in this sequence executes
+     * @param blockNumber the block number to use once reconnected
      */
-    public void scheduleRetry(
-            @NonNull final BlockNodeConnection connection, @NonNull final Duration initialDelay, Long blockNumber) {
-        requireNonNull(connection);
-        requireNonNull(initialDelay);
-        final var nodeConfig = connection.getNodeConfig();
-
-        long delayMillis = initialDelay.toMillis();
-        // Ensure non-negative delay
-        if (delayMillis < 0) {
-            delayMillis = 0;
+    public void scheduleConnectionAttempt(
+            @NonNull final BlockNodeConnection connection,
+            @NonNull final Duration initialDelay,
+            @Nullable final Long blockNumber) {
+        if (!isStreamingEnabled.get()) {
+            return;
         }
 
-        logger.info(
-                "[{}] Scheduling connection task for block node {} in {} ms",
-                Thread.currentThread().getName(),
-                blockNodeName(nodeConfig),
-                delayMillis);
+        requireNonNull(connection);
+        requireNonNull(initialDelay);
+        final long delayMillis = Math.max(0, initialDelay.toMillis());
+
+        logger.info("[{}] Scheduling reconnection for node at block {} in {} ms", connection, blockNumber, delayMillis);
+
+        activeConnectionRef.compareAndSet(connection, null); // if this was the active connection, remove it
+        connection.updateConnectionState(ConnectionState.CONNECTING);
 
         // Schedule the first attempt using the connectionExecutor
         try {
-            connectionExecutor.schedule(
+            executorService.schedule(
                     new BlockNodeConnectionTask(connection, initialDelay, blockNumber),
                     delayMillis,
                     TimeUnit.MILLISECONDS);
-            logger.debug(
-                    "[{}] Successfully scheduled connection task for {}.",
-                    Thread.currentThread().getName(),
-                    blockNodeName(nodeConfig));
-        } catch (Exception e) {
-            logger.error("Failed to schedule connection task for block node {}.", blockNodeName(nodeConfig), e);
+            logger.debug("[{}] Successfully scheduled reconnection task", connection);
+        } catch (final Exception e) {
+            logger.error("[{}] Failed to schedule connection task for block node", connection, e);
             // Consider closing the connection object if scheduling fails
             connection.close();
         }
@@ -246,123 +347,81 @@ public class BlockNodeConnectionManager {
      * Gracefully shuts down the connection manager, closing active connection.
      */
     public void shutdown() {
-        // Stop the block stream worker loop thread
-        blockStreamWorkerThreadRunning.set(false);
-        if (blockStreamWorkerThread != null) {
-            blockStreamWorkerThread.interrupt();
-            try {
-                blockStreamWorkerThread.join();
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                logger.error("Interrupted while waiting for block stream worker thread to terminate", e);
-            }
-        }
-
-        connectionExecutor.shutdown();
-        try {
-            if (!connectionExecutor.awaitTermination(10, TimeUnit.SECONDS)) {
-                logger.error("Failed to shut down connection executor within timeout");
-            }
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        }
-        synchronized (blockStreamStateManager.getConnections()) {
-            blockStreamStateManager.getConnections().values().forEach(BlockNodeConnection::close);
-            blockStreamStateManager.getConnections().clear();
-        }
-    }
-
-    /**
-     * Waits for at least one connection to be established.
-     * Initiates connection attempts and waits using a condition variable.
-     *
-     * @param timeout the maximum duration to wait for a connection to be established
-     * @return true if at least one connection was established, false if the timeout elapsed before any connections were established
-     */
-    public boolean waitForConnection(Duration timeout) {
-        // Initiate connection attempts first by selecting nodes and scheduling them
-        selectBlockNodeForStreaming();
-
-        long remainingSeconds = timeout.toSeconds();
-
-        // Loop while no connection is active
-        boolean connectionNotActive = true;
-        while (connectionNotActive) {
-            // Check if timeout expired
-            if (remainingSeconds <= 0L) {
-                logger.warn("Timeout waiting for initial block node connection after {}", timeout);
-                return false; // Timeout expired
-            }
-
-            try {
-                // Wait for a signal or until the remaining timeout elapses
-                Thread.sleep(1000);
-                remainingSeconds -= 1L;
-                connectionNotActive = blockStreamStateManager.getConnections().values().stream()
-                        .noneMatch(connection -> connection.getConnectionState().equals(ConnectionState.ACTIVE));
-                logger.info(
-                        "Waiting for Block Node connection to become ACTIVE... Remaining time: {} seconds",
-                        remainingSeconds);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                logger.warn("Interrupted while waiting for block node connection", e);
-                return false; // Interrupted
-            }
-        }
-        logger.info("A Block Node connection has become ACTIVE");
-        return true;
-    }
-
-    static String blockNodeName(@Nullable final BlockNodeConfig node) {
-        return node != null ? node.address() + ":" + node.port() : "null";
-    }
-
-    /**
-     * Opens a block for streaming by setting the target block number.
-     * If the connection is already active, it will set the jump target block if the current block number is -1.
-     *
-     * @param blockNumber the block number to open
-     */
-    public void openBlock(long blockNumber) {
-        final BlockNodeConnection connection = getActiveConnection();
-        if (connection == null) {
-            logger.warn(
-                    "[{}] No active connections available for streaming block {}",
-                    Thread.currentThread().getName(),
-                    blockNumber);
+        if (!isStreamingEnabled.get()) {
             return;
         }
 
-        if (connection.isActive()) {
-            if (streamingBlockNumber.get() == -1) {
-                jumpTargetBlock.set(blockNumber);
+        logger.info("Shutting down connection manager!");
+        // Stop the block stream worker loop thread
+        isConnectionManagerActive.set(false);
+        final Thread workerThread = blockStreamWorkerThreadRef.get();
+        workerThread.interrupt();
+        try {
+            workerThread.join();
+        } catch (final InterruptedException e) {
+            Thread.currentThread().interrupt();
+            logger.error("Interrupted while waiting for block stream worker thread to terminate", e);
+        }
+
+        // Close all of the connections
+        final Iterator<Map.Entry<BlockNodeConfig, BlockNodeConnection>> it =
+                connections.entrySet().iterator();
+        while (it.hasNext()) {
+            final Map.Entry<BlockNodeConfig, BlockNodeConnection> entry = it.next();
+            final BlockNodeConnection connection = entry.getValue();
+            try {
+                connection.close();
+            } catch (final RuntimeException e) {
+                logger.warn(
+                        "[{}] Error while closing connection during connection manager shutdown; ignoring",
+                        connection,
+                        e);
             }
+            it.remove();
+        }
+    }
+
+    /**
+     * Starts the connection manager. This will schedule a connection attempt to one of the block nodes. This does not
+     * block.
+     */
+    public void start() {
+        if (!isStreamingEnabled.get()) {
+            return;
+        }
+
+        if (!isConnectionManagerActive.compareAndSet(false, true)) {
+            throw new IllegalStateException("Connection manager already started");
+        }
+
+        if (!selectNewBlockNodeForStreaming()) {
+            throw new IllegalStateException("No block nodes available to connect to");
         }
     }
 
     /**
      * Selects the next highest priority available block node and schedules a connection attempt.
+     * @return true if a connection attempt will be made to a node, else false (i.e. no available nodes to connect)
      */
-    @VisibleForTesting
-    void selectBlockNodeForStreaming() {
-        synchronized (blockStreamStateManager.getConnections()) {
-            final BlockNodeConfig selectedNode = getNextPriorityBlockNode();
-
-            if (selectedNode == null) {
-                logger.debug(
-                        "[{}] No other block nodes found for attempted streaming.",
-                        Thread.currentThread().getName());
-                return;
-            } else {
-                logger.debug(
-                        "[{}] Selected block node {} for connection attempt.",
-                        Thread.currentThread().getName(),
-                        blockNodeName(selectedNode));
-            }
-
-            // If we selected a node, schedule the connection attempt.
-            connectToNode(selectedNode);
+    // Note: This is made public for future use when the block buffer is partially saturated, until then only tests call
+    // it
+    public boolean selectNewBlockNodeForStreaming() {
+        if (!isStreamingEnabled.get()) {
+            return false;
         }
+
+        final BlockNodeConfig selectedNode = getNextPriorityBlockNode();
+
+        if (selectedNode == null) {
+            logger.warn("No block nodes found for attempted streaming");
+            return false;
+        }
+
+        logger.debug("Selected block node {}:{} for connection attempt", selectedNode.address(), selectedNode.port());
+        // If we selected a node, schedule the connection attempt.
+        connectToNode(selectedNode);
+
+        return true;
     }
 
     /**
@@ -371,123 +430,94 @@ public class BlockNodeConnectionManager {
      *
      * @return the next available block node configuration
      */
-    public BlockNodeConfig getNextPriorityBlockNode() {
-        logger.info(
-                "[{}] Establishing connection to block node based on priorities",
-                Thread.currentThread().getName());
+    private @Nullable BlockNodeConfig getNextPriorityBlockNode() {
+        logger.debug("Searching for new block node connection based on node priorities...");
 
-        final Map<Integer, List<BlockNodeConfig>> priorityGroups =
-                getAvailableNodes().stream().collect(Collectors.groupingBy(BlockNodeConfig::priority));
-        final List<Integer> sortedPriorities = new ArrayList<>(priorityGroups.keySet());
-        sortedPriorities.sort(Integer::compare);
-
-        // Find the current lowest priority which is the priority of the active connection
-        final int currentMinPriority = getCurrentMinPriority();
+        final SortedMap<Integer, List<BlockNodeConfig>> priorityGroups = availableBlockNodes.stream()
+                .collect(Collectors.groupingBy(BlockNodeConfig::priority, TreeMap::new, Collectors.toList()));
 
         BlockNodeConfig selectedNode = null;
-        for (Integer priority : sortedPriorities) {
-            // Skip over any nodes that have less priority than the current minimum
-            // Correction: We want the lowest priority number (highest priority)
-            // But we only consider switching *up* in priority, so skip >= currentMinPriority
-            if (priority >= currentMinPriority) continue;
 
-            // Filter nodes not in retry, and select one randomly
-            final List<BlockNodeConfig> nextPriorityGroup = priorityGroups.get(priority).stream()
-                    .filter(node -> !blockStreamStateManager.getConnections().containsKey(node)
-                            || !RETRY_STATES.contains(blockStreamStateManager
-                                    .getConnections()
-                                    .get(node)
-                                    .getConnectionState())) // Check if node is marked for retry
-                    .toList();
+        for (final Map.Entry<Integer, List<BlockNodeConfig>> entry : priorityGroups.entrySet()) {
+            final int priority = entry.getKey();
+            final List<BlockNodeConfig> nodesInGroup = entry.getValue();
+            selectedNode = findAvailableNode(nodesInGroup);
 
-            if (!nextPriorityGroup.isEmpty()) {
-                // Select randomly among available nodes in the highest priority group found so far
-                final var randomIndex = random.nextInt(nextPriorityGroup.size());
-                selectedNode = nextPriorityGroup.get(randomIndex);
-                break; // Found the highest priority group with available nodes
+            if (selectedNode == null) {
+                logger.trace("No available node found in priority group {}", priority);
+            } else {
+                logger.trace("Found available node in priority group {}", priority);
+                return selectedNode;
             }
         }
-        // If no higher priority node is available, check the current priority group (if active)
-        if (selectedNode == null && currentMinPriority != Integer.MAX_VALUE) {
-            final List<BlockNodeConfig> currentPriorityGroup = priorityGroups.get(currentMinPriority).stream()
-                    .filter(node -> !isRetrying(node)) // Check if node is marked for retry
-                    .toList();
-            if (!currentPriorityGroup.isEmpty()) {
-                selectedNode = currentPriorityGroup.get(random.nextInt(currentPriorityGroup.size()));
-            }
-        }
-
-        // If still null, maybe check lower priorities only if NO connection is active?
-        // This logic primarily targets finding the BEST node, assuming retries handle eventual connection.
-        // If all nodes are in retry, selectedNode remains null, handled by caller.
 
         return selectedNode;
     }
 
-    private int getCurrentMinPriority() {
-        // Find the current lowest priority which is the priority of the active connection
-        return blockStreamStateManager.getConnections().values().stream()
-                .filter(connection -> connection.getConnectionState().equals(ConnectionState.ACTIVE))
-                .map(BlockNodeConnection::getNodeConfig)
-                .map(BlockNodeConfig::priority)
-                .min(Integer::compareTo)
-                .orElse(Integer.MAX_VALUE);
-    }
-
     /**
-     * Returns the active connection if one exists.
-     * @return return the active connection or null if none exists
+     * Given a list of available nodes, find a node that is not in a retrying state and is a candidate for connecting to.
+     *
+     * @param nodes list of possible nodes to connect to
+     * @return a node that is a candidate to connect to, or null if no candidate was found
      */
-    @VisibleForTesting
-    BlockNodeConnection getActiveConnection() {
-        return blockStreamStateManager.getActiveConnection();
+    private @Nullable BlockNodeConfig findAvailableNode(@NonNull final List<BlockNodeConfig> nodes) {
+        requireNonNull(nodes);
+
+        return nodes.stream()
+                .filter(nodeConfig -> {
+                    // We only want connections that are uninitialized
+                    final BlockNodeConnection connection = connections.get(nodeConfig);
+                    return connection == null || ConnectionState.UNINITIALIZED == connection.getConnectionState();
+                })
+                .collect(collectingAndThen(toList(), collected -> {
+                    // Randomize the available nodes
+                    shuffle(collected);
+                    return collected.stream();
+                }))
+                .findFirst() // select a node
+                .orElse(null);
     }
 
     /**
      * Creates a BlockNodeConnection instance and immediately schedules the *first*
      * connection attempt using the retry mechanism (with zero initial delay).
      *
-     * @param node The configuration of the node to connect to.
+     * @param nodeConfig the configuration of the node to connect to.
      */
-    private void connectToNode(@NonNull BlockNodeConfig node) {
-        logger.info("Scheduling connection attempt for block node {}", blockNodeName(node));
-        BlockNodeConnection connection = null; // Declare outside try
+    private void connectToNode(@NonNull final BlockNodeConfig nodeConfig) {
+        requireNonNull(nodeConfig);
+        logger.info("Scheduling connection attempt for block node {}:{}", nodeConfig.address(), nodeConfig.port());
 
         // Create the connection object
-        final GrpcServiceClient grpcClient = createNewGrpcClient(node);
-        connection = createBlockNodeConnection(node, grpcClient);
+        final GrpcServiceClient grpcClient = createNewGrpcClient(nodeConfig);
+        final BlockNodeConnection connection = new BlockNodeConnection(
+                configProvider, nodeConfig, this, blockBufferService, grpcClient, blockStreamMetrics, grpcEndpoint);
 
-        blockStreamStateManager.getConnections().put(node, connection);
+        connections.put(nodeConfig, connection);
         // Immediately schedule the FIRST connection attempt.
-        scheduleRetry(connection, Duration.ZERO, null);
+        scheduleConnectionAttempt(connection, Duration.ZERO, null);
     }
 
     /**
-     * Creates a new connection to a block node with the specified configuration.
-     * The connection is initialized in an UNINITIALIZED state and will be managed
-     * through its lifecycle based on priority and health.
+     * Opens a block for streaming by setting the target block number.
+     * If the connection is already active, it will set the jump target block if the current block number is -1.
      *
-     * @param node the configuration for the block node to connect to
-     * @param grpcClient the gRPC client to use for streaming
-     * @return the newly created and initialized block node connection
+     * @param blockNumber the block number to open
      */
-    public BlockNodeConnection createBlockNodeConnection(
-            @NonNull BlockNodeConfig node, @NonNull GrpcServiceClient grpcClient) {
-        BlockNodeConnection connection;
-        connection = new BlockNodeConnection(
-                configProvider, node, this, blockStreamStateManager, grpcClient, blockStreamMetrics);
-        return connection;
-    }
+    public void openBlock(final long blockNumber) {
+        if (!isStreamingEnabled.get()) {
+            return;
+        }
 
-    @VisibleForTesting
-    List<BlockNodeConfig> getAvailableNodes() {
-        return availableNodes;
-    }
+        final BlockNodeConnection activeConnection = activeConnectionRef.get();
+        if (activeConnection == null) {
+            logger.warn("No active connections available for streaming block {}", blockNumber);
+            return;
+        }
 
-    private boolean isRetrying(BlockNodeConfig config) {
-        if (config == null) return false;
-        // No external lock needed, ConcurrentHashMap handles its own concurrency for single ops.
-        return blockStreamStateManager.getConnections().containsKey(config);
+        if (streamingBlockNumber.get() == -1) {
+            jumpTargetBlock.set(blockNumber);
+        }
     }
 
     /**
@@ -496,28 +526,189 @@ public class BlockNodeConnectionManager {
      * @param blockNodeConfig the configuration for the block node
      * @param blockNumber the block number of the last verified block
      */
-    public void updateLastVerifiedBlock(
-            @NonNull final BlockNodeConfig blockNodeConfig, @Nullable final Long blockNumber) {
+    public void updateLastVerifiedBlock(@NonNull final BlockNodeConfig blockNodeConfig, final long blockNumber) {
+        if (!isStreamingEnabled.get()) {
+            return;
+        }
+
         requireNonNull(blockNodeConfig);
 
-        final Long latestBlock = getLastVerifiedBlock(blockNodeConfig);
-        if (blockNumber != null) {
-            if (blockNumber > latestBlock) {
-                lastVerifiedBlockPerConnection.put(blockNodeConfig, blockNumber);
+        lastVerifiedBlockPerConnection.compute(
+                blockNodeConfig,
+                (cfg, lastVerifiedBlockNumber) ->
+                        lastVerifiedBlockNumber == null ? blockNumber : Math.max(lastVerifiedBlockNumber, blockNumber));
+        blockBufferService.setLatestAcknowledgedBlock(blockNumber);
+    }
+
+    private void blockStreamWorkerLoop() {
+        while (isConnectionManagerActive.get()) {
+            try {
+                boolean shouldSleep;
+
+                // Process the block stream queue, creating a PublishStreamRequest for a particular Block if conditions
+                // are met
+                processBlockStreamQueue();
+
+                // If signaled to jump to a specific block, do so
+                jumpToBlockIfNeeded();
+
+                shouldSleep = processStreamingToBlockNode();
+
+                if (shouldSleep && !blockBufferService.getBlockStreamItemQueue().isEmpty()) {
+                    shouldSleep = false; // Don't sleep if there are items in the queue
+                }
+
+                // Sleep for a short duration to avoid busy waiting
+                if (shouldSleep) {
+                    // TODO: make sleep duration configurable
+                    Thread.sleep(PROCESSOR_LOOP_DELAY_MS);
+                }
+            } catch (final InterruptedException e) {
+                logger.error("Block stream worker interrupted", e);
+                Thread.currentThread().interrupt();
+            } catch (final Exception e) {
+                logger.error("Block stream worker encountered an error", e);
             }
-            blockStreamStateManager.setLatestAcknowledgedBlock(blockNumber);
         }
     }
 
     /**
-     * Retrieves the last verified block number for a specific block node.
+     * Send at most one request to the active block node - if there is one.
      *
-     * @param blockNodeConfig the configuration for the block node
-     * @return the last verified block number by the given block node, or -1 if none are verified.
+     * @return true if the worker thread should sleep because of a lack of work to do, else false (the worker thread
+     * should NOT sleep)
      */
-    public Long getLastVerifiedBlock(@NonNull final BlockNodeConfig blockNodeConfig) {
-        requireNonNull(blockNodeConfig);
-        return lastVerifiedBlockPerConnection.computeIfAbsent(blockNodeConfig, key -> -1L);
+    private boolean processStreamingToBlockNode() {
+        final BlockNodeConnection connection = activeConnectionRef.get();
+        if (connection == null) {
+            return true;
+        }
+
+        final long currentStreamingBlockNumber = streamingBlockNumber.get();
+        final BlockState blockState = blockBufferService.getBlockState(currentStreamingBlockNumber);
+        final long latestBlockNumber = blockBufferService.getBlockNumber();
+
+        if (blockState == null && latestBlockNumber > currentStreamingBlockNumber) {
+            logger.debug(
+                    "[{}] Block {} not found in buffer (latestBlock={}); connection will be closed",
+                    connection,
+                    currentStreamingBlockNumber,
+                    latestBlockNumber);
+            rescheduleAndSelectNewNode(connection, LONGER_RETRY_DELAY);
+            return true;
+        }
+
+        if (blockState == null || blockState.requestsSize() == 0) {
+            // the block was not found or there are no requests available to send, so return true (safe to sleep)
+            return true;
+        }
+
+        if (requestIndex < blockState.requestsSize()) {
+            logger.trace(
+                    "[{}] Processing block {} (isBlockComplete={}, totalBlockRequests={}, currentRequestIndex={})",
+                    connection,
+                    streamingBlockNumber,
+                    blockState.requestsCompleted(),
+                    blockState.requestsSize(),
+                    requestIndex);
+            final PublishStreamRequest publishStreamRequest = blockState.getRequest(requestIndex);
+            if (publishStreamRequest != null) {
+                connection.sendRequest(publishStreamRequest);
+                requestIndex++;
+            }
+        }
+
+        if (requestIndex == blockState.requestsSize() && blockState.requestsCompleted()) {
+            final long nextBlockNumber = streamingBlockNumber.incrementAndGet();
+            requestIndex = 0;
+            logger.trace("[{}] Moving to next block number: {}", connection, nextBlockNumber);
+            // we've moved to another block, don't sleep and instead immediately check if there is anything to send
+            return false;
+        }
+
+        if (requestIndex < blockState.requestsSize()) {
+            return false; // Don't sleep if there are more requests to process
+        }
+
+        return blockBufferService.getBlockStreamItemQueue().isEmpty();
+    }
+
+    private void processBlockStreamQueue() {
+        final Queue<BlockStreamQueueItem> itemQueue = blockBufferService.getBlockStreamItemQueue();
+        final int batchSize = blockItemBatchSize();
+
+        for (int i = 0; i < batchSize && !itemQueue.isEmpty(); ++i) {
+            final BlockStreamQueueItem blockStreamQueueItem = itemQueue.poll();
+
+            if (blockStreamQueueItem == null) {
+                // This shouldn't be possible since the for-loop condition should prevent it
+                // but leaving this check to be defensive
+                continue;
+            }
+
+            final long blockNumber = blockStreamQueueItem.blockNumber();
+            final BlockItem blockItem = blockStreamQueueItem.blockItem();
+            final BlockState blockState = blockBufferService.getBlockState(blockNumber);
+
+            if (blockState == null) {
+                continue;
+            }
+
+            final boolean isPreBlockProof =
+                    BlockStreamQueueItemType.PRE_BLOCK_PROOF_ACTION == blockStreamQueueItem.blockStreamQueueItemType();
+
+            if (isPreBlockProof) {
+                blockState.createRequestFromCurrentItems(blockItemBatchSize(), true);
+            } else {
+                blockState.addItem(blockItem);
+                blockState.createRequestFromCurrentItems(blockItemBatchSize(), false);
+
+                if (blockItem.hasBlockProof()) {
+                    blockState.createRequestFromCurrentItems(blockItemBatchSize(), true);
+                    blockState.setRequestsCompleted();
+                }
+            }
+        }
+    }
+
+    /**
+     * Updates the current connection processor to jump to a specific block, if the jump flag is set.
+     */
+    private void jumpToBlockIfNeeded() {
+        // Check if the processor has been signaled to jump to a specific block
+        final long targetBlock = jumpTargetBlock.getAndSet(-1); // Check and clear jump signal atomically
+
+        if (targetBlock < 0) {
+            // there is nothing to jump to
+            return;
+        }
+
+        logger.debug("Jumping to block {}", targetBlock);
+        streamingBlockNumber.set(targetBlock);
+        requestIndex = 0; // Reset request index for the new block
+    }
+
+    /**
+     * Returns the block number that is currently being streamed
+     *
+     * @return the number of the block which is currently being streamed to a block node
+     */
+    public long currentStreamingBlockNumber() {
+        return streamingBlockNumber.get();
+    }
+
+    /**
+     * Set the flag to indicate the current active connection should "jump" to the specified block.
+     *
+     * @param blockNumberToJumpTo the block number to jump to
+     */
+    public void jumpToBlock(final long blockNumberToJumpTo) {
+        if (!isStreamingEnabled.get()) {
+            return;
+        }
+
+        logger.debug("Marking request to jump to block {}", blockNumberToJumpTo);
+        jumpTargetBlock.set(blockNumberToJumpTo);
     }
 
     public void setJumpTargetBlock(long blockNumber) {
@@ -529,24 +720,19 @@ public class BlockNodeConnectionManager {
      * Schedules itself for subsequent retries upon failure using the connectionExecutor.
      * Handles setting active connection and signaling on success.
      */
-    private class BlockNodeConnectionTask implements Runnable {
+    class BlockNodeConnectionTask implements Runnable {
         private final BlockNodeConnection connection;
         private Duration currentBackoffDelay; // Represents the delay *before* the next attempt
-
         private final Long blockNumber; // If becoming ACTIVE, the blockNumber to jump to
 
         BlockNodeConnectionTask(
-                @NonNull final BlockNodeConnection connection, @NonNull final Duration initialDelay, Long blockNumber) {
+                @NonNull final BlockNodeConnection connection,
+                @NonNull final Duration initialDelay,
+                @Nullable final Long blockNumber) {
             this.connection = requireNonNull(connection);
             // Ensure initial delay is non-negative for backoff calculation
             this.currentBackoffDelay = initialDelay.isNegative() ? Duration.ZERO : initialDelay;
             this.blockNumber = blockNumber;
-
-            // if the connection is scheduled for retry, we need to set the state to PENDING_TO_STREAM
-            // and filter out those connection in getNextPriorityBlockNode()
-            if (!initialDelay.isZero() && !ConnectionState.PENDING_TO_CONNECT.equals(connection.getConnectionState())) {
-                connection.updateConnectionState(ConnectionState.PENDING_TO_STREAM);
-            }
         }
 
         /**
@@ -556,314 +742,112 @@ public class BlockNodeConnectionManager {
          */
         @Override
         public void run() {
-            final var nodeConfig = connection.getNodeConfig();
-            try {
-                synchronized (blockStreamStateManager.getConnections()) {
-                    logger.debug(
-                            "[{}] Running connection task for block node {} ConnectionState: {}",
-                            Thread.currentThread().getName(),
-                            blockNodeName(nodeConfig),
-                            connection.getConnectionState());
+            if (!isStreamingEnabled.get()) {
+                return;
+            }
 
-                    // Check if the connection is already active
-                    if (connection.getConnectionState().equals(ConnectionState.ACTIVE)) {
+            if (!isConnectionManagerActive.get()) {
+                logger.info("Connection task will not run because the connection manager has shutdown");
+                return;
+            }
+
+            try {
+                logger.debug("[{}] Running connection task...", connection);
+                final BlockNodeConnection activeConnection = activeConnectionRef.get();
+
+                if (activeConnection != null) {
+                    if (activeConnection.equals(connection)) {
+                        // not sure how the active connection is in a connectivity task... ignoring
+                        return;
+                    } else if (activeConnection.getNodeConfig().priority()
+                            <= connection.getNodeConfig().priority()) {
+                        // this new connection has a lower (or equal) priority than the existing active connection
+                        // this connection task should thus be cancelled/ignored
                         logger.debug(
-                                "[{}] Connection task for block node {} is already active",
-                                Thread.currentThread().getName(),
-                                blockNodeName(nodeConfig));
-                    } else if (blockStreamStateManager.getConnections().values().stream()
-                            .anyMatch(c -> c.getConnectionState().equals(ConnectionState.ACTIVE)
-                                    && c.getNodeConfig().priority() <= nodeConfig.priority())) {
-                        // If we have an active connection, and this task is of lower priority, stop rescheduling.
-                        logger.debug(
-                                "[{}] Connection task for block node {} is stopping due to active connection with higher priority",
-                                Thread.currentThread().getName(),
-                                blockNodeName(nodeConfig));
-                    } else if (connection.getConnectionState().equals(ConnectionState.UNINITIALIZED)
-                            || connection.getConnectionState().equals(ConnectionState.PENDING_TO_CONNECT)) {
-                        // This is either the first connection attempt ever or the connection was closed and needs
-                        // to be re-established
-                        connection.createRequestObserver(); // This may throw an exception if the connection fails
-                        connection.updateConnectionState(ConnectionState.PENDING_TO_STREAM);
-                        logger.debug(
-                                "[{}] Connection task for block node {} ConnectionState: {}",
-                                Thread.currentThread().getName(),
-                                blockNodeName(nodeConfig),
-                                connection.getConnectionState());
-                        transitionActiveIfNoConnectionsAreActive(nodeConfig);
-                    } else if (connection.getConnectionState().equals(ConnectionState.PENDING_TO_STREAM)) {
-                        transitionActiveIfNoConnectionsAreActive(nodeConfig);
+                                "The existing active connection ({}) has an equal or higher priority than the "
+                                        + "connection ({}) we are attempting to connect to and this new connection attempt will be ignored",
+                                activeConnection,
+                                connection);
+                        return;
                     }
                 }
-            } catch (Exception e) {
-                // Calculate next delay based on the *previous* backoff delay for this task instance
-                Duration nextDelay = currentBackoffDelay.isZero()
-                        ? INITIAL_RETRY_DELAY // Start with initial delay if previous was 0
-                        : currentBackoffDelay.multipliedBy(RETRY_BACKOFF_MULTIPLIER);
 
-                if (nextDelay.compareTo(MAX_RETRY_DELAY) > 0) {
-                    nextDelay = MAX_RETRY_DELAY;
-                }
+                /*
+                If we have got to this point, it means there is no active connection or it means there is an active
+                connection, but the active connection has a lower priority than the connection in this task. In either
+                case, we want to elevate this connection to be the new active connection.
+                 */
 
-                // Apply jitter
-                long jitteredDelayMs;
-                if (nextDelay.toMillis() > 0) {
-                    jitteredDelayMs = nextDelay.toMillis() / 2 + random.nextLong(nextDelay.toMillis() / 2 + 1);
+                connection.createRequestObserver();
+
+                if (activeConnectionRef.compareAndSet(activeConnection, connection)) {
+                    // we were able to elevate this connection to the new active one
+                    connection.updateConnectionState(ConnectionState.ACTIVE);
+                    final long blockToJumpTo =
+                            blockNumber != null ? blockNumber : blockBufferService.getLowestUnackedBlockNumber();
+                    jumpTargetBlock.set(blockToJumpTo);
                 } else {
-                    // Should not happen if INITIAL_RETRY_DELAY > 0, but handle defensively
-                    jitteredDelayMs = INITIAL_RETRY_DELAY.toMillis() / 2
-                            + random.nextLong(INITIAL_RETRY_DELAY.toMillis() / 2 + 1);
-                    if (jitteredDelayMs <= 0) jitteredDelayMs = 1; // Ensure positive delay
+                    // Another connection task has preempted this task... reschedule and try again
+                    reschedule();
                 }
 
-                // Update backoff delay *for the next run* of this task instance
-                this.currentBackoffDelay = Duration.ofMillis(jitteredDelayMs);
-
-                logger.warn(
-                        "[{}] Stream establishment attempt failed for block node {}: {}. Rescheduling in {} ms",
-                        Thread.currentThread().getName(),
-                        blockNodeName(nodeConfig),
-                        e.getMessage(),
-                        jitteredDelayMs);
-
-                // Reschedule this task using the calculated jittered delay
-                try {
-                    connectionExecutor.schedule(this, jitteredDelayMs, TimeUnit.MILLISECONDS);
-                } catch (Exception scheduleEx) {
-                    logger.error(
-                            "Failed to reschedule connection attempt for block node {}. Removing from retry map.",
-                            blockNodeName(nodeConfig),
-                            scheduleEx);
-                    // If rescheduling fails, remove from connections map. A periodic task will handle checking if there
-                    // are no longer any connections
-                    blockStreamStateManager.getConnections().remove(nodeConfig);
-                    // We might also want to explicitly close the connection object here if rescheduling fails
-                    // catastrophically
-                    connection.close();
-                }
-            }
-        }
-
-        private void transitionActiveIfNoConnectionsAreActive(BlockNodeConfig nodeConfig) {
-            if (blockStreamStateManager.getConnections().values().stream()
-                    .noneMatch(connection -> connection.getConnectionState().equals(ConnectionState.ACTIVE))) {
-                connection.updateConnectionState(ConnectionState.ACTIVE);
-                blockStreamStateManager.setActiveConnection(connection);
-                jumpTargetBlock.set(Objects.requireNonNullElseGet(
-                        blockNumber, blockStreamStateManager::getLowestUnackedBlockNumber));
-                logger.debug(
-                        "[{}] Connection task for block node {} ConnectionState: {}",
-                        Thread.currentThread().getName(),
-                        blockNodeName(nodeConfig),
-                        connection.getConnectionState());
-            }
-        }
-    }
-
-    private void blockStreamWorkerLoop() {
-        while (blockStreamWorkerThreadRunning.get()) {
-            try {
-                boolean shouldSleep = true;
-
-                // Process the block stream queue, creating a PublishStreamRequest for a particular Block if conditions
-                // are met
-                processBlockStreamQueue();
-
-                // If signaled to jump to a specific block, do so
-                jumpToBlock();
-
-                // Get Block Node connection that is ACTIVE
-                final BlockNodeConnection currentActiveConnection = blockStreamStateManager.getActiveConnection();
-                if (currentActiveConnection != null) {
-                    shouldSleep = processStreamingToBlockNode(currentActiveConnection);
-                }
-
-                if (shouldSleep
-                        && !blockStreamStateManager.getBlockStreamQueue().isEmpty()) {
-                    shouldSleep = false; // Don't sleep if there are items in the queue
-                }
-
-                // Sleep for a short duration to avoid busy waiting
-                if (shouldSleep) {
-                    Thread.sleep(PROCESSOR_LOOP_DELAY_MS);
-                }
-            } catch (InterruptedException e) {
-                logger.error(
-                        "[{}] blockStreamWorkerLoop encountered an error: {}",
-                        Thread.currentThread().getName(),
-                        e.getMessage(),
-                        e);
-                Thread.currentThread().interrupt();
-            } catch (Exception e) {
-                logger.error(
-                        "[{}] blockStreamWorkerLoop encountered an error: {}",
-                        Thread.currentThread().getName(),
-                        e.getMessage(),
-                        e);
-            }
-        }
-    }
-
-    private boolean processStreamingToBlockNode(BlockNodeConnection currentActiveConnection) {
-        final BlockState blockState = blockStreamStateManager.getBlockState(streamingBlockNumber.get());
-        final long currentBlockNumber = blockStreamStateManager.getBlockNumber();
-
-        if (blockState == null && currentBlockNumber > streamingBlockNumber.get()) {
-            logger.debug(
-                    "[{}] Block {} state not found and current block is {}, ending stream for node {}",
-                    Thread.currentThread().getName(),
-                    streamingBlockNumber.get(),
-                    currentBlockNumber,
-                    blockStreamStateManager
-                                    .getActiveConnection()
-                                    .getNodeConfig()
-                                    .address() + ":"
-                            + blockStreamStateManager
-                                    .getActiveConnection()
-                                    .getNodeConfig()
-                                    .port());
-            handleConnectionError(currentActiveConnection, LONGER_RETRY_DELAY);
-            return true;
-        }
-
-        if (blockState != null && blockState.requestsSize() != 0) {
-            if (requestIndex < blockState.requestsSize()) {
-                logger.trace(
-                        "[{}] Processing block {} for node {}, isComplete: {}, requests: {}, requestIndex: {}",
-                        Thread.currentThread().getName(),
-                        streamingBlockNumber,
-                        currentActiveConnection.getNodeConfig().address() + ":"
-                                + currentActiveConnection.getNodeConfig().port(),
-                        blockState.requestsCompleted(),
-                        blockState.requestsSize(),
-                        requestIndex);
-                PublishStreamRequest publishStreamRequest = blockState.getRequest(requestIndex);
-                currentActiveConnection.sendRequest(publishStreamRequest);
-                requestIndex++;
-            }
-
-            if (requestIndex >= blockState.requestsSize() && blockState.requestsCompleted()) {
-                if (blockStreamStateManager.higherPriorityStarted(currentActiveConnection)) {
-                    logger.debug(
-                            "[{}] BlockStreamProcessor higher priority block node chosen {}",
-                            Thread.currentThread().getName(),
-                            blockStreamStateManager
-                                            .getActiveConnection()
-                                            .getNodeConfig()
-                                            .address() + ":"
-                                    + blockStreamStateManager
-                                            .getActiveConnection()
-                                            .getNodeConfig()
-                                            .port());
-                    streamingBlockNumber.set(blockStreamStateManager.getLowestUnackedBlockNumber());
-                    requestIndex = 0;
-                    return false;
-                } else {
-                    logger.trace(
-                            "[{}] BlockStreamProcessor incrementing blockNumber to {}",
-                            Thread.currentThread().getName(),
-                            streamingBlockNumber.get() + 1);
-                    streamingBlockNumber.getAndIncrement();
-                    requestIndex = 0;
-                }
-            }
-
-            if (requestIndex <= blockState.requestsSize() && !blockState.requestsCompleted()) {
-                return false; // Don't sleep if there are more requests to process
-            }
-        }
-
-        return blockStreamStateManager.getBlockStreamQueue().isEmpty();
-    }
-
-    private void processBlockStreamQueue() {
-        if (!blockStreamStateManager.getBlockStreamQueue().isEmpty()) {
-            BlockStreamQueueItem blockStreamQueueItem =
-                    blockStreamStateManager.getBlockStreamQueue().poll();
-            if (blockStreamQueueItem != null) {
-                long blockNumber = blockStreamQueueItem.getBlockNumber();
-                BlockItem blockItem = blockStreamQueueItem.getBlockItem();
-                BlockState blockState = blockStreamStateManager.getBlockState(blockNumber);
-                if (blockState != null) {
-                    if (blockStreamQueueItem
-                            .getBlockStreamQueueItemType()
-                            .equals(BlockStreamQueueItemType.PRE_BLOCK_PROOF_ACTION)) {
-                        blockState.createRequestFromCurrentItems(getBlockItemBatchSize(), true);
-                    } else {
-                        blockState.addItem(blockItem);
-                        blockState.createRequestFromCurrentItems(getBlockItemBatchSize(), false);
-                        if (blockItem.hasBlockProof()) {
-                            blockState.createRequestFromCurrentItems(getBlockItemBatchSize(), true);
-                            blockState.setRequestsCompleted();
-                        }
+                if (activeConnection != null) {
+                    // close the old active connection
+                    try {
+                        activeConnection.close();
+                    } catch (final RuntimeException e) {
+                        logger.warn(
+                                "[{}] Failed to shutdown connection (shutdown reason: another connection was elevated to active)",
+                                activeConnection,
+                                e);
                     }
                 }
-            }
-        }
-    }
-
-    private int getBlockItemBatchSize() {
-        return configProvider
-                .getConfiguration()
-                .getConfigData(BlockStreamConfig.class)
-                .blockItemBatchSize();
-    }
-
-    private void jumpToBlock() {
-        // Check if the processor has been signaled to jump to a specific block
-        final long targetBlock = jumpTargetBlock.getAndSet(-1); // Check and clear jump signal atomically
-        if (targetBlock >= 0) {
-            logger.debug(
-                    "[{}] BlockStreamProcessor received jump signal to block {}",
-                    Thread.currentThread().getName(),
-                    targetBlock);
-            streamingBlockNumber.set(targetBlock);
-            requestIndex = 0; // Reset request index for the new block
-        }
-    }
-
-    /**
-     * * Returns the atomic reference tracking the current streaming block number.
-     *
-     * @return The block number of the block which is currently being streamed to a block node
-     */
-    public AtomicLong getStreamingBlockNumber() {
-        return streamingBlockNumber;
-    }
-
-    /**
-     * Find a pending connection with the highest priority greater than the current connection
-     *
-     * @param blockNodeConnection the current connection to compare with
-     * @return the highest priority pending connection, or null if none found
-     */
-    @VisibleForTesting
-    BlockNodeConnection getHighestPriorityPendingConnection(@NonNull final BlockNodeConnection blockNodeConnection) {
-        BlockNodeConnection highestPri = null;
-        for (BlockNodeConnection connection :
-                this.blockStreamStateManager.getConnections().values()) {
-            if (connection.getConnectionState().equals(ConnectionState.PENDING_TO_STREAM)
-                    && connection.getNodeConfig().priority()
-                            < blockNodeConnection.getNodeConfig().priority()) {
-                if (highestPri == null
-                        || connection.getNodeConfig().priority()
-                                < highestPri.getNodeConfig().priority()) {
-                    // If no connection is found or the current one has a higher priority, update the reference
-                    highestPri = connection;
-                }
+            } catch (final Exception e) {
+                logger.warn("[{}] Failed to establish connection to block node; will schedule a retry", connection);
+                reschedule();
             }
         }
 
-        return highestPri;
-    }
+        /**
+         * Reschedules the connect attempt.
+         */
+        private void reschedule() {
+            // Calculate next delay based on the *previous* backoff delay for this task instance
+            Duration nextDelay = currentBackoffDelay.isZero()
+                    ? INITIAL_RETRY_DELAY // Start with initial delay if previous was 0
+                    : currentBackoffDelay.multipliedBy(RETRY_BACKOFF_MULTIPLIER);
 
-    /**
-     * Returns the atomic reference for the block number which can be updated
-     * and the block stream worker thread will jump to that block on the next iteration.
-     *
-     * @return the jump target block number
-     */
-    public AtomicLong getJumpTargetBlock() {
-        return jumpTargetBlock;
+            if (nextDelay.compareTo(MAX_RETRY_DELAY) > 0) {
+                nextDelay = MAX_RETRY_DELAY;
+            }
+
+            // Apply jitter
+            long jitteredDelayMs;
+            final ThreadLocalRandom random = ThreadLocalRandom.current();
+
+            if (nextDelay.toMillis() > 0) {
+                jitteredDelayMs = nextDelay.toMillis() / 2 + random.nextLong(nextDelay.toMillis() / 2 + 1);
+            } else {
+                // Should not happen if INITIAL_RETRY_DELAY > 0, but handle defensively
+                jitteredDelayMs =
+                        INITIAL_RETRY_DELAY.toMillis() / 2 + random.nextLong(INITIAL_RETRY_DELAY.toMillis() / 2 + 1);
+                jitteredDelayMs = Math.max(1, jitteredDelayMs); // Ensure positive delay
+            }
+
+            // Update backoff delay *for the next run* of this task instance
+            this.currentBackoffDelay = Duration.ofMillis(jitteredDelayMs);
+
+            // Reschedule this task using the calculated jittered delay
+            try {
+                executorService.schedule(this, jitteredDelayMs, TimeUnit.MILLISECONDS);
+                logger.debug("[{}] Rescheduled connection attempt (delayMillis={})", connection, jitteredDelayMs);
+            } catch (final Exception e) {
+                logger.error("[{}] Failed to reschedule connection attempt; removing from retry map", connection, e);
+                // If rescheduling fails, close the connection and remove it from the connection map. A periodic task
+                // will handle checking if there are no longer any connections
+                connections.remove(connection.getNodeConfig());
+                connection.close();
+            }
+        }
     }
 }
